# opengl-c-test-2

./: CMakeLists.txt
libs/include/glad/: glad.h
libs/lib/: cglm.lib  glad.lib
src/: block.c  block.h  block_renderer.c  block_renderer.h  camera.c  camera.h  chunck.c  chunk.h  main.c  shader_loader.c  shader_loader.h  voxel.c  voxel.h  window.c  window.h
src/shaders/: fragment.glsl  vertex.glsl
